UnBBayes/src/main/java/unbbayes/cps/DistributionParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g 2009-12-29 10:11:52

package unbbayes.cps; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class DistributionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Identifier", "FloatingPointLiteral", "STRING_LITERAL", "DecimalLiteral", "EXP", "VAR", "SLIST", "EscapeSequence", "Letter", "JavaIDDigit", "OctalEscape", "WS", "COMMENT", "LINE_COMMENT", "'{'", "'}'", "'if'", "'else'", "'print'", "';'", "'return'", "'throw'", "'break'", "'continue'", "':'", "'('", "')'", "','", "'='", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'['", "']'", "'boolean'", "'char'", "'byte'", "'short'", "'int'", "'long'", "'float'", "'double'", "'number'", "'string'", "'?'", "'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'~'", "'!'", "'null'", "'this'", "'.'", "'class'", "'void'", "'true'", "'false'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__29=29;
    public static final int T__65=65;
    public static final int T__28=28;
    public static final int T__62=62;
    public static final int T__27=27;
    public static final int T__63=63;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int Identifier=4;
    public static final int T__55=55;
    public static final int T__19=19;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int STRING_LITERAL=6;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__18=18;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int EXP=8;
    public static final int T__59=59;
    public static final int SLIST=10;
    public static final int VAR=9;
    public static final int COMMENT=16;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__80=80;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int LINE_COMMENT=17;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int DecimalLiteral=7;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=15;
    public static final int T__71=71;
    public static final int T__33=33;
    public static final int T__72=72;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__70=70;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int FloatingPointLiteral=5;
    public static final int JavaIDDigit=13;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int OctalEscape=14;
    public static final int Letter=12;
    public static final int EscapeSequence=11;
    public static final int T__73=73;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;

    // delegates
    // delegators


        public DistributionParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DistributionParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DistributionParser.tokenNames; }
    public String getGrammarFileName() { return "Distribution.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:16:1: program : ( statement )* ;
    public final DistributionParser.program_return program() throws RecognitionException {
        DistributionParser.program_return retval = new DistributionParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        DistributionParser.statement_return statement1 = null;



        try {
            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:16:9: ( ( statement )* )
            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:16:12: ( statement )*
            {
            root_0 = (Object)adaptor.nil();

            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:16:12: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=Identifier && LA1_0<=DecimalLiteral)||LA1_0==18||LA1_0==20||(LA1_0>=22 && LA1_0<=27)||LA1_0==29||LA1_0==41||(LA1_0>=43 && LA1_0<=52)||(LA1_0>=65 && LA1_0<=66)||(LA1_0>=70 && LA1_0<=76)||(LA1_0>=78 && LA1_0<=80)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:16:12: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program47);
            	    statement1=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:44:1: block : '{' ( blockStatement )* '}' -> ^( SLIST ( blockStatement )* ) ;
    public final DistributionParser.block_return block() throws RecognitionException {
        DistributionParser.block_return retval = new DistributionParser.block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal2=null;
        Token char_literal4=null;
        DistributionParser.blockStatement_return blockStatement3 = null;


        Object char_literal2_tree=null;
        Object char_literal4_tree=null;
        RewriteRuleTokenStream stream_19=new RewriteRuleTokenStream(adaptor,"token 19");
        RewriteRuleTokenStream stream_18=new RewriteRuleTokenStream(adaptor,"token 18");
        RewriteRuleSubtreeStream stream_blockStatement=new RewriteRuleSubtreeStream(adaptor,"rule blockStatement");
        try {
            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:45:5: ( '{' ( blockStatement )* '}' -> ^( SLIST ( blockStatement )* ) )
            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:45:9: '{' ( blockStatement )* '}'
            {
            char_literal2=(Token)match(input,18,FOLLOW_18_in_block73);  
            stream_18.add(char_literal2);

            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:45:13: ( blockStatement )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=Identifier && LA2_0<=DecimalLiteral)||LA2_0==18||LA2_0==20||(LA2_0>=22 && LA2_0<=27)||LA2_0==29||LA2_0==41||(LA2_0>=43 && LA2_0<=52)||(LA2_0>=65 && LA2_0<=66)||(LA2_0>=70 && LA2_0<=76)||(LA2_0>=78 && LA2_0<=80)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:45:13: blockStatement
            	    {
            	    pushFollow(FOLLOW_blockStatement_in_block75);
            	    blockStatement3=blockStatement();

            	    state._fsp--;

            	    stream_blockStatement.add(blockStatement3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            char_literal4=(Token)match(input,19,FOLLOW_19_in_block78);  
            stream_19.add(char_literal4);



            // AST REWRITE
            // elements: blockStatement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:33: -> ^( SLIST ( blockStatement )* )
            {
                // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:45:36: ^( SLIST ( blockStatement )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SLIST, "SLIST"), root_1);

                // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:45:44: ( blockStatement )*
                while ( stream_blockStatement.hasNext() ) {
                    adaptor.addChild(root_1, stream_blockStatement.nextTree());

                }
                stream_blockStatement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class blockStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "blockStatement"
    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:48:1: blockStatement : statement ;
    public final DistributionParser.blockStatement_return blockStatement() throws RecognitionException {
        DistributionParser.blockStatement_return retval = new DistributionParser.blockStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        DistributionParser.statement_return statement5 = null;



        try {
            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:49:5: ( statement )
            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:52:5: statement
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_statement_in_blockStatement121);
            statement5=statement();

            state._fsp--;

            adaptor.addChild(root_0, statement5.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "blockStatement"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:56:1: statement : ( block | 'if' ifExpression statement ( options {k=1; } : 'else' statement )? | 'print' ( arguments )? ';' -> ^( 'print' arguments ) | 'return' ( expression )? ';' | 'throw' expression ';' | 'break' ( Identifier )? ';' | 'continue' ( Identifier )? ';' | ';' | statementExpression ';' | Identifier ':' statement );
    public final DistributionParser.statement_return statement() throws RecognitionException {
        DistributionParser.statement_return retval = new DistributionParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal7=null;
        Token string_literal10=null;
        Token string_literal12=null;
        Token char_literal14=null;
        Token string_literal15=null;
        Token char_literal17=null;
        Token string_literal18=null;
        Token char_literal20=null;
        Token string_literal21=null;
        Token Identifier22=null;
        Token char_literal23=null;
        Token string_literal24=null;
        Token Identifier25=null;
        Token char_literal26=null;
        Token char_literal27=null;
        Token char_literal29=null;
        Token Identifier30=null;
        Token char_literal31=null;
        DistributionParser.block_return block6 = null;

        DistributionParser.ifExpression_return ifExpression8 = null;

        DistributionParser.statement_return statement9 = null;

        DistributionParser.statement_return statement11 = null;

        DistributionParser.arguments_return arguments13 = null;

        DistributionParser.expression_return expression16 = null;

        DistributionParser.expression_return expression19 = null;

        DistributionParser.statementExpression_return statementExpression28 = null;

        DistributionParser.statement_return statement32 = null;


        Object string_literal7_tree=null;
        Object string_literal10_tree=null;
        Object string_literal12_tree=null;
        Object char_literal14_tree=null;
        Object string_literal15_tree=null;
        Object char_literal17_tree=null;
        Object string_literal18_tree=null;
        Object char_literal20_tree=null;
        Object string_literal21_tree=null;
        Object Identifier22_tree=null;
        Object char_literal23_tree=null;
        Object string_literal24_tree=null;
        Object Identifier25_tree=null;
        Object char_literal26_tree=null;
        Object char_literal27_tree=null;
        Object char_literal29_tree=null;
        Object Identifier30_tree=null;
        Object char_literal31_tree=null;
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleSubtreeStream stream_arguments=new RewriteRuleSubtreeStream(adaptor,"rule arguments");
        try {
            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:57:5: ( block | 'if' ifExpression statement ( options {k=1; } : 'else' statement )? | 'print' ( arguments )? ';' -> ^( 'print' arguments ) | 'return' ( expression )? ';' | 'throw' expression ';' | 'break' ( Identifier )? ';' | 'continue' ( Identifier )? ';' | ';' | statementExpression ';' | Identifier ':' statement )
            int alt8=10;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:57:7: block
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_block_in_statement148);
                    block6=block();

                    state._fsp--;

                    adaptor.addChild(root_0, block6.getTree());

                    }
                    break;
                case 2 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:59:11: 'if' ifExpression statement ( options {k=1; } : 'else' statement )?
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal7=(Token)match(input,20,FOLLOW_20_in_statement161); 
                    string_literal7_tree = (Object)adaptor.create(string_literal7);
                    root_0 = (Object)adaptor.becomeRoot(string_literal7_tree, root_0);

                    pushFollow(FOLLOW_ifExpression_in_statement164);
                    ifExpression8=ifExpression();

                    state._fsp--;

                    adaptor.addChild(root_0, ifExpression8.getTree());
                    pushFollow(FOLLOW_statement_in_statement166);
                    statement9=statement();

                    state._fsp--;

                    adaptor.addChild(root_0, statement9.getTree());
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:59:40: ( options {k=1; } : 'else' statement )?
                    int alt3=2;
                    alt3 = dfa3.predict(input);
                    switch (alt3) {
                        case 1 :
                            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:59:56: 'else' statement
                            {
                            string_literal10=(Token)match(input,21,FOLLOW_21_in_statement176); 
                            pushFollow(FOLLOW_statement_in_statement179);
                            statement11=statement();

                            state._fsp--;

                            adaptor.addChild(root_0, statement11.getTree());

                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:70:9: 'print' ( arguments )? ';'
                    {
                    string_literal12=(Token)match(input,22,FOLLOW_22_in_statement197);  
                    stream_22.add(string_literal12);

                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:70:17: ( arguments )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==29) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:70:17: arguments
                            {
                            pushFollow(FOLLOW_arguments_in_statement199);
                            arguments13=arguments();

                            state._fsp--;

                            stream_arguments.add(arguments13.getTree());

                            }
                            break;

                    }

                    char_literal14=(Token)match(input,23,FOLLOW_23_in_statement202);  
                    stream_23.add(char_literal14);



                    // AST REWRITE
                    // elements: arguments, 22
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 70:35: -> ^( 'print' arguments )
                    {
                        // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:70:38: ^( 'print' arguments )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_22.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_arguments.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:71:9: 'return' ( expression )? ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal15=(Token)match(input,24,FOLLOW_24_in_statement227); 
                    string_literal15_tree = (Object)adaptor.create(string_literal15);
                    adaptor.addChild(root_0, string_literal15_tree);

                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:71:18: ( expression )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( ((LA5_0>=Identifier && LA5_0<=DecimalLiteral)||LA5_0==29||LA5_0==41||(LA5_0>=43 && LA5_0<=52)||(LA5_0>=65 && LA5_0<=66)||(LA5_0>=70 && LA5_0<=76)||(LA5_0>=78 && LA5_0<=80)) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:71:18: expression
                            {
                            pushFollow(FOLLOW_expression_in_statement229);
                            expression16=expression();

                            state._fsp--;

                            adaptor.addChild(root_0, expression16.getTree());

                            }
                            break;

                    }

                    char_literal17=(Token)match(input,23,FOLLOW_23_in_statement232); 
                    char_literal17_tree = (Object)adaptor.create(char_literal17);
                    adaptor.addChild(root_0, char_literal17_tree);


                    }
                    break;
                case 5 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:72:9: 'throw' expression ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal18=(Token)match(input,25,FOLLOW_25_in_statement242); 
                    string_literal18_tree = (Object)adaptor.create(string_literal18);
                    adaptor.addChild(root_0, string_literal18_tree);

                    pushFollow(FOLLOW_expression_in_statement244);
                    expression19=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, expression19.getTree());
                    char_literal20=(Token)match(input,23,FOLLOW_23_in_statement246); 
                    char_literal20_tree = (Object)adaptor.create(char_literal20);
                    adaptor.addChild(root_0, char_literal20_tree);


                    }
                    break;
                case 6 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:73:9: 'break' ( Identifier )? ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal21=(Token)match(input,26,FOLLOW_26_in_statement256); 
                    string_literal21_tree = (Object)adaptor.create(string_literal21);
                    adaptor.addChild(root_0, string_literal21_tree);

                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:73:17: ( Identifier )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==Identifier) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:73:17: Identifier
                            {
                            Identifier22=(Token)match(input,Identifier,FOLLOW_Identifier_in_statement258); 
                            Identifier22_tree = (Object)adaptor.create(Identifier22);
                            adaptor.addChild(root_0, Identifier22_tree);


                            }
                            break;

                    }

                    char_literal23=(Token)match(input,23,FOLLOW_23_in_statement261); 
                    char_literal23_tree = (Object)adaptor.create(char_literal23);
                    adaptor.addChild(root_0, char_literal23_tree);


                    }
                    break;
                case 7 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:74:9: 'continue' ( Identifier )? ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    string_literal24=(Token)match(input,27,FOLLOW_27_in_statement271); 
                    string_literal24_tree = (Object)adaptor.create(string_literal24);
                    adaptor.addChild(root_0, string_literal24_tree);

                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:74:20: ( Identifier )?
                    int alt7=2;
                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==Identifier) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:74:20: Identifier
                            {
                            Identifier25=(Token)match(input,Identifier,FOLLOW_Identifier_in_statement273); 
                            Identifier25_tree = (Object)adaptor.create(Identifier25);
                            adaptor.addChild(root_0, Identifier25_tree);


                            }
                            break;

                    }

                    char_literal26=(Token)match(input,23,FOLLOW_23_in_statement276); 
                    char_literal26_tree = (Object)adaptor.create(char_literal26);
                    adaptor.addChild(root_0, char_literal26_tree);


                    }
                    break;
                case 8 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:75:9: ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal27=(Token)match(input,23,FOLLOW_23_in_statement286); 

                    }
                    break;
                case 9 :
                    // C:\\workspace\\AntlrExamples\\src\\UMath\\Distribution.g:76:9: statementExpression ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_statementExpression_in_statement297);
                    statementExpression28=statementExpression();

                    state._fsp--;

